2008-08-15  Xerxes Ranby <xerxes@zafena.se>

	* acinclude.m4: Fixed LIBGCJ_JAR check.

2008-08-15  Xerxes Ranby <xerxes@zafena.se>

	* Makefile.am (CACAO_MD5SUM): Update for 0.99.3.

2008-08-15  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-hotspot-use-idx_t.patch: New.
	* patches/icedtea-hotspot-params-cast-size_t.patch: Likewise.
	* Makefile.am (ICEDTEA_PATCHES): Add patches.

2008-08-15  Matthias Klose  <doko@ubuntu.com>

	* openjdk/hotspot/build/linux/makefiles/gcc.make: Build hotspot
	with -fPIC on s390/s390x.

2008-08-14  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-jdk-use-ssize_t.patch: New.
	* Makefile.am (ICEDTEA_PATCHES): Add patch.

2008-08-14  Andrew Haley  <aph@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::SharkBuilder): Fix syntax error on template class
	name.	
	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp (class
	SharkBuilder): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkValue.hpp (class
	SharkValue): Likewise.

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::compile_method): Properly declare temporaries.

2008-08-14  Lillian Angel  <langel@redhat.com>

	* acinclude.m4: Changed LIBGCJ_JAR check to be less stringent with 
	minor versions.

2008-08-14  Mark Wielaard  <mark@klomp.org>

	* patches/icedtea-signed-types-hot6.patch: New patch.
	* Makefile.am (NON_ZERO_PATCHES): Add icedtea-signed-types-hot6.patch.

2008-08-13  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp
	(print_word): Recognise non-header parts of Shark frames.

2008-08-13  Gary Benson  <gbenson@redhat.com>

	PR icedtea/184:
	* ports/hotspot/src/cpu/zero/vm/stubGenerator_zero.cpp
	(call_stub): Add support for returning floats and doubles.

2008-08-12  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-arch.patch: Add support for mipsel-linux.

2008-08-12  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/cacao.stamp): Robustify.
