@@ -242,7 +242,7 @@ AC_DEFUN([FIND_LIBGCJ_JAR],
 [
   AM_CONDITIONAL(GCC_OLD, test x != x)
   AC_ARG_WITH([libgcj-jar],
-              [AS_HELP_STRING(--with-libgcj-jar,specify location of the libgcj 4.3.0 jar)],
+              [AS_HELP_STRING(--with-libgcj-jar,specify location of the libgcj 4.3.x jar)],
   [
     if test -f "${withval}"; then
       AC_MSG_CHECKING(libgcj jar)
@@ -254,13 +254,16 @@ AC_DEFUN([FIND_LIBGCJ_JAR],
     LIBGCJ_JAR=
   ])
   if test -z "${LIBGCJ_JAR}"; then
-    AC_MSG_CHECKING(for libgcj-4.3.*.jar or libgcj-4.1.*.jar)
+    AC_MSG_CHECKING(for libgcj-4.3.*.jar, libgcj-4.2.*.jar or libgcj-4.1.*.jar)
     if test -e /usr/share/java/libgcj-4.3.*.jar; then
       LIBGCJ_JAR=/usr/share/java/libgcj-4.3.*.jar
       AC_MSG_RESULT(${LIBGCJ_JAR})
     else
        AM_CONDITIONAL(GCC_OLD, test x = x)
-       if test -e /usr/share/java/libgcj-4.1.*.jar; then
+       if test -e /usr/share/java/libgcj-4.2.*.jar; then
+         LIBGCJ_JAR=/usr/share/java/libgcj-4.2.*.jar
+         AC_MSG_RESULT(${LIBGCJ_JAR})
+       elif test -e /usr/share/java/libgcj-4.1.*.jar; then
          LIBGCJ_JAR=/usr/share/java/libgcj-4.1.*.jar
          AC_MSG_RESULT(${LIBGCJ_JAR})
        else
